# tauri-island

./: .gitignore  README.md  SETTINGS_UI_IMPROVEMENTS.md  email.html  index.html  package-lock.json  package.json  settings.html  vite.config.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: right-click-minimize-plan.md
dynamic-island/: README.md  debug-run.bat  email.html  index.html  package-lock.json  package.json  release-tag.md  settings.html  tsconfig.json  vite.config.ts
dynamic-island/docs/: AI_AGENT_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_PLAN.md  requirements-ai-agent-mode.md
dynamic-island/lyricify-lyrics-provider-rs/: .gitignore  Cargo.toml  README.md
dynamic-island/lyricify-lyrics-provider-rs/src/: lib.rs  smtc_lyrics.rs
dynamic-island/lyricify-lyrics-provider-rs/src/helpers/: mod.rs  offset_helper.rs  string_helper.rs
dynamic-island/lyricify-lyrics-provider-rs/src/models/: additional_file_info.rs  file_info.rs  line_info.rs  lyrics_data.rs  lyrics_types.rs  mod.rs  syllable_info.rs  sync_types.rs  track_metadata.rs
dynamic-island/lyricify-lyrics-provider-rs/src/parsers/: attributes_helper.rs  kugou.rs  lrc.rs  mod.rs  netease.rs  qqmusic.rs  soda_music.rs  yrc.rs
dynamic-island/lyricify-lyrics-provider-rs/src/parsers/decrypt/: krc.rs  mod.rs  qrc.rs
dynamic-island/lyricify-lyrics-provider-rs/src/parsers/models/: mod.rs  yrc_models.rs
dynamic-island/lyricify-lyrics-provider-rs/src/providers/: base_api.rs  kugou.rs  mod.rs  netease.rs  proxy.rs  qqmusic.rs  soda_music.rs
dynamic-island/lyricify-lyrics-provider-rs/src/searchers/: kugou.rs  mod.rs  netease.rs  qqmusic.rs  soda_music.rs
dynamic-island/lyricify-lyrics-provider-rs/src/searchers/helpers/: compare.rs
dynamic-island/lyricify-lyrics-provider-rs/tests/: test_soda_music.rs
dynamic-island/public/themes/: agent-base.css  base.css  classic.css  glow-border.css  liquid-glass.css
dynamic-island/sadb-core/src/: adb.rs  config.rs  control.rs  error.rs  lib.rs
dynamic-island/src/: dom.ts  highlight-setup.ts  main.ts  settings-lyric-offset.ts  settings.ts  state.ts  styles-agent.css  styles.css  types.ts  utils.ts
dynamic-island/src-tauri/: Cargo.toml  tauri.conf.json
dynamic-island/src-tauri/capabilities/: default.json
dynamic-island/src-tauri/src/: ai.rs  cc.rs  ceverything.rs  clipboard.rs  email.rs  lib.rs  logger.rs  lyrics.rs  main.rs  media.rs  sadb.rs  settings.rs  updater.rs  window.rs
dynamic-island/src/modules/: capsule-interaction.ts  lyric-renderer.ts  minimize-drag.ts  notice-queue.ts  notice-url.ts  resize-observer.ts  search.ts  view-switcher.ts  weather.ts
public/themes/: base.css  classic.css  email-base.css  liquid-glass.css
sadb-core/: Cargo.toml
sadb-core/src/: adb.rs  client.rs  protocol.rs  stream.rs
scripts/: gen-icons.mjs
src/: dom.ts  logger.ts  main.ts  screens-frame.ts  settings.css  settings.ts  state.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: betterncm.rs  cc.rs  ceverything.rs  email.rs  lib.rs  link_handler.rs  logger.rs  lyrics.rs  media.rs  privacy.rs  sadb.rs  settings.rs  tools.rs  updater.rs  window.rs
src/modules/: agent.ts  capsule-interaction.ts  email-resize.ts  email-view.ts  lyric-renderer.ts  minimize-drag.ts  music-controls.ts  notice-queue.ts  notice-url.ts  privacy.ts  rAF.ts  resize-observer.ts  sadb.ts  search.ts  view-switcher.ts
