[package]
name = "sadb-core"
version = "0.1.0"
edition = "2021"
description = "Scrcpy-like Android screen mirroring protocol implementation in Rust"
license = "MIT"
repository = "https://github.com/your-org/sadb"
keywords = ["android", "scrcpy", "screen-mirroring", "adb", "h264"]

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
