[package]
name = "lyricify-lyrics-provider"
version = "26.2.1"
edition = "2021"
description = "Network lyrics provider for Lyricify. Searchers, providers and SMTC lyrics pipeline."
license = "Apache-2.0"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1.52.1", features = ["full"] }
async-trait = "0.1"
urlencoding = "2"
base64 = "0.22"
flate2 = "1"
once_cell = "1"
memchr = "2"
